examples/test/testpolicy1887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1887
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key43: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value14
          key2: value2
      podSelector:
        matchLabels:
          key10: value28
          key30: value30
          key3: value14
